# 25b2186_Summer-of-Robotics

./: README.md  Week5 code_Question1  Week5 code_Question2
LLM-Controlled-Bot/: CMakeLists.txt  README.md  package.xml
LLM-Controlled-Bot/config/: costmap.yaml  gz_bridge.yaml  locations.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_jazzy.yaml  slam_params.yaml
LLM-Controlled-Bot/config/bt/: navigate_w_recovery.xml
LLM-Controlled-Bot/launch/: nav2.launch.py  nav2_navigation_global_tf.launch.py  robot.launch.py  rsp.launch.py  slam.launch.py  slam_nav.launch.py
LLM-Controlled-Bot/maps/: README.md  my_maze_map.pgm  my_maze_map.yaml
LLM-Controlled-Bot/rviz/: bot.rviz
LLM-Controlled-Bot/scripts/: bt_server.py  check_odometry.py  collision_monitor.py  coverage_planner.py  deadlock_recovery.py  frontier_coordinator.py  frontier_explorer.py  keyboard_teleop.py  llm_nav.py  mission_server.py  navigation.py  obstacle_tracker.py  odom_tf_broadcaster.py  path_planning.py  pid_controller.py  priority_collision_avoidance.py  reset_pose.py  tf_map_relay.py  tf_static_relay.py  waypoint_nav.py
LLM-Controlled-Bot/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  lidar3d.xacro  robot.urdf.xacro  robot_core.xacro
LLM-Controlled-Bot/worlds/: corridor.world  house.world  maze.world  obstacles.world  warehouse.world
