<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive_robot</name>
  <version>0.1.0</version>
  <description>Autonomous differential drive robot with SLAM and navigation</description>
  <maintainer email="adoojonathan412@gmail.com">adoodevv</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  
  <!-- Sensor & Message dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  
  <!-- Gazebo dependencies – gz-sim7/common4/transport11 = Humble (GZ Garden)  -->
  <!--                         gz-sim8/common5/transport13 = Jazzy  (GZ Harmonic) -->
  <!-- The correct set will be installed for your ROS distro; the other is ignored. -->
  <exec_depend>gz-sim7</exec_depend>
  <exec_depend>gz-common4</exec_depend>
  <exec_depend>gz-transport11</exec_depend>
  <exec_depend>gz-sim8</exec_depend>
  <exec_depend>gz-common5</exec_depend>
  <exec_depend>gz-transport13</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>